--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 	<title>Hangman Game</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<link rel="stylesheet" type="text/css" href="./assets/style.css">
+	<script src="./assets/javaScript.js" type="text/javaScript"></script>
+
 </head>
 <h1>Hangman Game</h1>
 <h2>No stick figures were injured in the makin of this game</h2>
