--- a/index.html
+++ b/index.html
@@ -2,14 +2,57 @@
 <html>
 <head>
 	<title>Hangman Game</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<link rel="stylesheet" type="text/css" href="./assets/style.css">
-	<script src="./assets/javaScript.js" type="text/javaScript"></script>
+
+	    <link rel="stylesheet" type="text/css" href="./assets/reset.css">
+	    <!-- Latest compiled and minified CSS --> 
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+		<!-- Optional theme -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+		<link rel="stylesheet" type="text/css" href="./assets/style.css">
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+     <!-- <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script> -->
+		
+		
 
 </head>
-<h1>Hangman Game</h1>
-<h2>No stick figures were injured in the makin of this game</h2>
-<body>
 
+<body>  
+
+    <div class="jumbotron">
+      <h1>Hangman Game</h1>
+        <h2>No stick figures were injured in the making of this game</h2>
+     </div>
+<div class="row">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <img src="http://www.geeksofdoom.com/GoD/img/2015/07/the-hateful-eight-header-image-530x282.jpg" alt="A picture of Kurt Russel">
+  </div>
+</div>
+
+<div class="hangman">
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      <p>Press any key to get started</p>
+    </div>
+  </div>
+
+  <div class='row'>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      <p id="guessesLeft">Guesses Left</p>
+      <p id='guessedLetters'>Guessed letters: </p>
+      <p id='rightGuesses'>_ _ _ _ _ _ _</p>
+    </div>
+  </div>
+</div>
+
+
+
+<script src="./assets/javaScript.js"></script>
+	
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
