--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-     <!-- <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script> -->
+    <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+
 		
 		
 
@@ -42,8 +43,8 @@
   <div class='row'>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
       <p id="guessesLeft">Guesses Left</p>
-      <p id='guessedLetters'>Guessed letters: </p>
-      <p id='rightGuesses'>_ _ _ _ _ _ _</p>
+      <p id='guessedLetters'>Guessed letters, </p>
+      <p id='rightGuesses'></p>
     </div>
   </div>
 </div>
