--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
   <div class='row'>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
       <p id="guessesLeft">Guesses Left</p>
-      <p id='guessedLetters'>Guessed letters, </p>
-      <p id='rightGuesses'></p>
+      <p id='guessedLetters'>Guessed letters: </p>
+      <span><p id='rightGuesses'>Right Guesses: </p></span>
+      <p id='button'><button type="button" class="btn btn-danger">Reset</button></p>
     </div>
   </div>
 </div>
+
 
 
 
