--- a/index.html
+++ b/index.html
@@ -23,33 +23,48 @@
 
 <body>  
 
+<div class="container">
+
     <div class="jumbotron">
       <h1>Hangman Game</h1>
         <h2>No stick figures were injured in the making of this game</h2>
      </div>
-<div class="row">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    <img src="http://www.geeksofdoom.com/GoD/img/2015/07/the-hateful-eight-header-image-530x282.jpg" alt="A picture of Kurt Russel">
+
+
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Word to guess: </h3>
+  </div>
+  <div class="panel-body">
+    <h2 id="wordToGuess">_ _ _ _ _ </h2>
   </div>
 </div>
 
-<div class="hangman">
-  <div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <p>Press any key to get started</p>
+  <div class="panel panel-default">
+    <div class="panel-body">
+      Wrong Guesses: <span id="wrongGuesses"></span>
     </div>
   </div>
 
-  <div class='row'>
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <p id="guessesLeft">Guesses Left</p>
-      <p id='guessedLetters'>Guessed letters: </p>
-      <span><p id='rightGuesses'>Right Guesses: </p></span>
-      <p id='button'><button type="button" class="btn btn-danger">Reset</button></p>
-    </div>
+<div class="panel panel-default">
+  <div class="panel-body">
+    Guesses Left: <span id="numGuesses">9</span>
   </div>
 </div>
 
+<div class="panel panel-default">
+  <div class="panel-body">
+    Win Counter: <span id="winCounter">0</span>
+  </div>
+</div>
+
+<div class="panel panel-default">
+  <div class="panel-body">
+    Loss Counter: <span id="lossCounter">0</span>
+  </div>
+</div>
+
+</div>
 
 
 
