--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div class="jumbotron">
       <h1>Hangman Game</h1>
         <h2>No stick figures were injured in the making of this game</h2>
+         <h3>The 8 major characters in Hateful8 </h3>
      </div>
 
 
